[project]
name = "blueberry-rs-phenology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "bokeh>=3.7.2",
    "bs4>=0.0.2",
    "cartopy>=0.24.1",
    "dask[distributed]>=2025.4.1",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "llvmlite>=0.44.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "planetary-computer>=1.0.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pystac>=1.13.0",
    "pystac-client>=0.8.6",
    "rasterio>=1.4.3",
    "ray[default]>=2.45.0",
    "rioxarray>=0.19.0",
    "scipy>=1.15.2",
    "stackstac>=0.5.1",
    "tqdm>=4.67.1",
    "uv>=0.7.2",
    "xarray-spatial>=0.4.0",
]
